<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Impresion"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvImpresion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tvImpresion"
        android:textAlignment="center"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tvCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tvCantidad"
        android:textAlignment="center"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/tvInteres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tvInteres"
        android:textAlignment="center"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tvTotal"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvSuma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tvSuma"
        android:textAlignment="center"
        android:textSize="24sp" />
</LinearLayout>